# Laba9Py

./: README.md  pyproject.toml  requirements.txt
src/main/: Dispatcher.py  LogicExample.py  config.py  main.py
src/main/contracts/: AsyncHandling.py  Executable.py  TaskHandling.py
src/main/sources/: JsonHandler.py  XmlHandler.py
src/main/tasks/: IllegalArgumentException.py  Task.py  TaskGenerator.py  TaskQueue.py
src/main/tasks/enums/: Priority.py  Status.py
test/main/sources/: JsonHandlerTest.py  XmlHandlerTest.py
test/main/tasks/: TaskGeneratorTest.py
tests/main/sources/: test_JsonHandler.py  test_XmlHandler.py
tests/main/tasks/: test_TaskQueue.py
