[project]
name = "labs"
version = "0.0.1"
description = "Laboratory work 6"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/main/main.py",
    "src/main/config.py",
    "src/main/LogicExample.py",
    "src/main/contracts/Executable.py"
]
