[project]
name = "labs"
version = "0.0.1"
description = "Laboratory work 6"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "src/main/main.py",
    "src/main/config.py",
    "src/main/LogicExample.py",
    "src/main/contracts/Executable.py"
]
